# FastaGuard

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: adoption-plan.md  benchmarking.md  compare-mode.md  llm-tooling-vision.md  mvp-spec.md  output-contract.md  packaging.md  preflight-readiness.md  product-thesis.md  roadmap.md  tool-landscape.md  use-cases.md  value-benchmark.md  vision-plan.md
docs/evidence/: fastaguard-v0.2-evidence.md  fastaguard-v0.3-evidence.md  fastaguard-v0.5-submission-readiness.md  public_assemblies.json
docs/releases/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
examples/nextflow/: main.nf
examples/nf-core/: README.md
examples/reports/: README.md
examples/snakemake/: Snakefile
integrations/multiqc/: README.md  pyproject.toml
integrations/multiqc/src/fastaguard_multiqc/: __init__.py  multiqc_module.py  parser.py
packaging/bioconda/: README.md  build.sh  meta.yaml
schema/: fastaguard.schema.json  finding-catalog.json
scripts/: benchmark_large_fasta.py  collect_evidence.py  package_release_artifact.sh
src/: cli.rs  compare.rs  contract.rs  findings.rs  gate.rs  lib.rs  main.rs  metrics.rs  models.rs  parser.rs  profile.rs  readiness.rs  submission.rs
src/report/: compare_html.rs  compare_multiqc.rs  compare_tsv.rs  html.rs  json.rs  mod.rs  multiqc.rs  tsv.rs
src/stats/: composition.rs  mod.rs  nxx.rs  outliers.rs
testdata/: problem_assembly.fa  submission_ids.fa  submission_warnings.fa  valid_assembly.fa
tests/: cli.rs  schema_contract.rs
tests/golden/: compare_all_pass.json  compare_mixed_status.json  invalid_empty_record.json  problem_assembly.json  valid_assembly.json
(+30 files in other folders)
