[package]
name = "fastaguard"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "FASTA preflight QC for assembly pipelines"
repository = "https://github.com/ehsanestaji/FastaGuard"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
jsonschema = { version = "0.46", default-features = false }
predicates = "3"
tempfile = "3"
